--- a/src/components/Definitions/Definitions.css
+++ b/src/components/Definitions/Definitions.css
@@ -2,10 +2,32 @@
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
+    scrollbar-width: thin;
+    height: 55vh;
+    border: 10px solid #F8F0E3;
+    border-radius: 10px;
+    padding: 10px 20px;
+    overflow-x: hidden;
 }
 
 .subTitle {
-    font-size: 4vw;
+    font-size: 3vw;
     font-family: 'Monserrat', sans-serif;
     font-family: 'Bonheur Royale', cursive;
+}
+
+.singleMean {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    padding: 10px 20px;
+    margin: 10px 0;
+}
+
+@media (max-width:900px) {
+    .meanings {
+        height: 60vh;
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
 }
